--- a/training/index.html
+++ b/training/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        hello-world
+    <div class="article">
+        <div></div>
     </div>
 </body>
 </html>
