--- a/training/index.html
+++ b/training/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="article">
-        <div><a href=""></a></div>
+    <div>
+        Hello Word frob branch training1
     </div>
 </body>
 </html>
