--- a/training/index.html
+++ b/training/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        Hello Word frob branch training1
+        Hello Word from branch training1
     </div>
 </body>
 </html>
