--- a/SK-TRAINING_Winter_2021/index.html
+++ b/SK-TRAINING_Winter_2021/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        Hello Word from branch training3
-    
-    </div>
+    <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, iusto.</div>
+    <div class="box">Vero maiores beatae numquam consectetur totam, reiciendis ipsa placeat vel.</div>
+    <div id="item">Voluptatibus ea delectus saepe nobis quo dolorum, commodi unde odio!</div>
+    <ul>
+        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, atque?</li>
+        <li>Rem, recusandae in fuga quis nostrum ratione consequatur voluptas quibusdam?</li>
+        <li>Itaque, maxime necessitatibus blanditiis excepturi rerum magnam harum officia. Animi.</li>
+    </ul>
+    <ol>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, esse!</li>
+        <li>Minima consequuntur id consectetur repellat iste porro asperiores dicta nobis?</li>
+        <li>Vero, impedit ipsum molestiae rerum aperiam a numquam deserunt nulla!</li>
+    </ol>
 </body>
 </html> 
-git 
