--- a/SK-TRAINING_Winter_2021/index.html
+++ b/SK-TRAINING_Winter_2021/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        Hello Word from branch training3
+        Hello from githab
+        
     
     </div>
 </body>
