--- a/SK-TRAINING_Winter_2021/index.html
+++ b/SK-TRAINING_Winter_2021/index.html
@@ -4,14 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        Hello from githab
-        
-    
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <header><h1>header1</h1> </header>
+                <footer></footer>
+            </section>
+            <section>
+                <header></header>
+                <footer></footer>
+            </section>
+        </article>
+    </main>
+    <footer>
+        Copyright by Frontend Developer &copy; 2021
+    </footer>
 </body>
 </html> 
 git 
