--- a/SK-TRAINING_Winter_2021/Homeworks/index.html
+++ b/SK-TRAINING_Winter_2021/Homeworks/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        Hello Word from master Homework
-    </div>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. Suscipit, 
+            veritatis quasi? Repellendus recusandae 
+            quibusdam dolorem animi saepe magni quas quos!
+        </p>
+        <nav>
+            <ul>
+                <li><a href="https://www.facebook.com/" class="icon fab fa-facebook-square"></a></li>
+                <li><a href="https://www.youtube.com/" class="icon fab fa-youtube"></a></li>
+                <li><a href="http://instagram.com/" class="icon fab fa-instagram "></a></li>
+                <li><a href="https://www.pinterest.com/" class="icon fab fa-pinterest "></a></li>
+            </ul>
+        </nav>
+    </main>
+    
+    <script src="https://kit.fontawesome.com/354ee16719.js" crossorigin="anonymous"></script>
 </body>
 </html> 
