--- a/SK-TRAINING_Winter_2021/Homeworks/homework1/index.html
+++ b/SK-TRAINING_Winter_2021/Homeworks/homework1/index.html
@@ -11,19 +11,8 @@
 </head>
 <body>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur, 
-            adipisicing elit. Suscipit, 
-            veritatis quasi? Repellendus recusandae 
-            quibusdam dolorem animi saepe magni quas quos!
-        </p>
-        <nav>
-            <ul>
-                <li><a href="https://www.facebook.com/" class="icon fab fa-facebook-square"></a></li>
-                <li><a href="https://www.youtube.com/" class="icon fab fa-youtube"></a></li>
-                <li><a href="http://instagram.com/" class="icon fab fa-instagram "></a></li>
-                <li><a href="https://www.pinterest.com/" class="icon fab fa-pinterest "></a></li>
-            </ul>
-        </nav>
+        <div>Drop <br> Shadow</div>
+        <div>drop <br> shadow </div>
     </main>
     
     <script src="https://kit.fontawesome.com/354ee16719.js" crossorigin="anonymous"></script>
